# pilisp

./: .gitignore  .picompile  .travis.yml  Doxyfile  Makefile  README.md  README_8md.html  a.lisp  annotated.html  bad__prints__test_8c.html  bad__prints__test_8c__incl.map  bad__prints__test_8c__incl.md5  classes.html  codecov.yml  customdoxygen.css  dir_000001_000000.html  dir_000002_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions.lisp  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_b.html  globals_func_c.html  (+224 more)
compiler/: compiler.lisp  compiler_tests.lisp  ct.l  instructions_generator.lisp
docs/: Makefile  README.md  api-Pilisp.md  api-Tests.md  conf.py  dir_13e138d54eb8818da29c3992edef070a.html  group__Pilisp.html  group__test.html  index.html  index.md  make.bat  modules.html  pilisp.css  pilisp_8h__incl.dot
docs/doxystyle/: doxygen-layout.xml  footer.html  header.html
docs/html/: README_8md.html  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  group__Pilisp.html  group__Tests.html  group__test.html  header.html  index.html  main_8c.html  md_README.html  menudata.js  modules.html  pages.html  pilisp_8c.html  pilisp_8c__incl.dot  pilisp_8c__incl.md5  pilisp_8h.html  pilisp_8h__dep__incl.dot  pilisp_8h__dep__incl.md5  pilisp_8h__incl.md5  pilisp_8h_source.html  test.html  testRadiceQuadrata_8c.html  testZero_8c.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  files_0.js  files_3.js  functions_1.js  groups_0.js  groups_1.js  pages_0.js  pages_1.js  searchdata.js
docs/markdown/: api.md
docs/search/: all_1.js
docs/source/: conf.py  index.rst
examples/: a.lisp  basic.lisp  bench.lisp  cc.l  compilable_diff.lisp  compilable_maze.lisp  compiler.lisp  diff_benchmark.lisp  functions.lisp  instructions_generator.lisp  killme.lisp  machine_code_generator.lisp
include/: meson.build  perror.h  pibuiltin.h  picell.h  pichecks.h  picore.h  pierror.h  pifile.h  piinit.h  pilisp.h  piparser.h  piprint.h  piremove.h  pisettings.h  pistack.h  pitestutils.h  piutils.h
l/: a.l  basic.lisp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  (+22 more)
src/: main.c  meson.build  perror.c  pibuiltin.c  picell.c  pichecks.c  picore.c  pierror.c  pifile.c  piinit.c  pilisp.c  piparser.c  piprint.c  piremove.c  pistack.c  pitestutils.c  piutils.c  ptestutils.c
test/: bad_prints_test.c  lisp_program_load_test.c  lisp_program_test.c  meson.build  parser_accepted_strings_test.c  parser_rejected_strings_test.c  parser_test.c  print_lexer_test.c  print_test.c  recursive_structure_print_test.c  sexpr_copy_test.c  testRadiceQuadrata.c  testZero.c
test/expressions/: atoms.l  dotexpressions.lisp  listnotation1.l  listnotation1.lisp  listnotation2.lisp  tokens.lisp
test/expressions/badexpressions/: badlistnotation.lisp  complicate.lisp  unfinished.lisp
test/lisp_programs/: compilable_diff.lisp  diff.lisp  factorial.lisp  ibeforee.lisp  list_operations.lisp  loadtest.lisp  maps.lisp  max.lisp  maze.lisp  maze_let.lisp  maze_old.lisp
