################################################################################
#                                 HEADERS                                        
################################################################################

headers = [ 
        'pibuiltin.h',
        'picell.h',
        'picore.h',
        'pierror.h',
        'pifile.h',
        'piinit.h',
        'pilisp.h',
        'piparser.h',
        'piprint.h',
        'pisettings.h',
        'pistack.h',
        'pitestutils.h',
]

install_headers(headers)