################################################################################
#                                 HEADERS                                        
################################################################################

headers = [ 
        'pibuiltin.h',
        'picell.h',
        'picore.h',
        'pierror.h',
        'pifile.h',
        'piinit.h',
        'pilisp.h',
        'piparser.h',
        'piprint.h',
        'pisettings.h',
        'piremove.h',
        'pistack.h',
        'pitestutils.h',
]

install_headers(headers)