################################################################################
#                                 HEADERS                                        
################################################################################

headers = [ 
        'pibuiltin.h',
        'picell.h',
        'pichecks.h',
        'picore.h',
        'pierror.h',
        'pifile.h',
        'piinit.h',
        'pilisp.h',
        'piparser.h',
        'piprint.h',
        'piremove.h',
        'pisettings.h',
        'pistack.h',
        'pitestutils.h',
        'piutils.h',
]

install_headers(headers)